--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.10"
 authors = [
-    {name = "Abu Bakr Soliman", email = "https://github.com/bakrianoo"}
+    {name = "Abu Bakr Soliman", email = "bakrianoo@myemail.com"}
 ]
 keywords = ["machine-learning", "transformers", "multi-task-learning", "classification", "data-augmentation", "nlp"]
 classifiers = [
@@ -24,11 +24,17 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
-dependencies = []
+dependencies = [
+    "openai>=2.15.0",
+    "transformers>=4.57.6",
+    "datasets>=4.5.0",
+    "scikit-learn>=1.7.0",
+    "json-repair>=0.55.0",
+]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/rapidfit"
-Repository = "https://github.com/yourusername/rapidfit"
+Homepage = "https://github.com/bakrianoo/RapidFit"
+Repository = "https://github.com/bakrianoo/RapidFit"
 
 [tool.setuptools.packages.find]
 where = ["src"]
