--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,14 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
 ]
 dependencies = [
-    "openai>=1.0.0",
-    "json-repair>=0.30.0",
-    "rich>=13.0.0",
+    "openai>=2.0.0",
+    "json-repair>=0.55.0",
+    "rich>=14.0.0",
+    "torch>=2.0.0",
+    "transformers>=4.57.3",
+    "datasets>=4.2.0",
+    "scikit-learn>=1.6.1",
+    "accelerate>=0.26.0",
 ]
 
 [project.urls]
